jpress v3.2.3:
新增：新增用户绑定账号后，取消绑定的功能
新增：尝试性支持 jdk11 ~ jdk14
修复：快递100查询时因签名未转大写，造成签名错误而无法正常显示快递信息问题。感谢 @lixuanqun
修复：下载的附件目录不规范的问题，感谢 @Retire
优化：优化 OauthConnector，支持可以自由配置回调域名
优化：优化 违法关键字 词库



jpress v3.2.2:
优化：JPress 的安装和升级流程
优化：重构第三方登录的授权流程
优化：优化产品的相关指令和注释
修复：使用 QQ 第三方登录的时候无法正常登录的问题
修复：正确设置微信小程序、第三方登录等的首次用户状态
修复：当产品详情页引用 product.js 但是未启用 Swiper 的时候出错的问题
修复：checkout 页面无法正确删除产品的问题
修复：JPress 低版本升级到最新版本是，倘若最后一步不填写管理员账号密码会出错的问题



jpress v3.2.1:
新增：模板预览功能，前端可以通过 url 访问指定已经安装的模板
优化：升级 ckeditor 到最新版本，以支持 word 的复制粘贴功能
优化：通过 QQ 进行第三方登录时，发生错误提示不明显的问题
修复：分销用户无法正确获取分销金额的问题
修复：ArticleService.findListByCategoryId() 的 count 参数不起作用的问题
修复：通过 paypal 进行支付发生错误的问题
修复：加购物车返回的 Json 内容不正确的问题，感谢 @一座城你说你不懂
修复：通过 Github 第三方登录无法获取正确的用户数据的问题



jpress v3.2.0:
新增：添加一个全新的插件：留言插件，方便网站使用其增强 "留言" 功能，同时方便新手作为一个参考去开发自己的插件，感谢作者 @安杰
新增：可以通过 URL 直接访问模板页面的功能，假设存在模板 abc.html，增可以直接通过 http://domain/abc 去访问。
新增：默认模板 calmlog 新增文章搜索功能
新增：产品详情页新增 URL 分享按钮，当产品启用分销时，分销的 URL 可以获得相应的佣金。
优化：重构 TemplateManager，使其代码更加简洁
优化：优化 #CategoriesDirective 指令，防止在产品页面使用时出现类型转换错误的问题
优化：对 BaseProductInfoQuerier 进行重构，方便在开发插件的时候可以获取更多的信息
优化：删除 ArticleServiceProvider 中多余的不必要的注解
优化：对 AddonControllerManager 进行优化，插件的 Controller 的 viewPath 不用必须为 "/" 的问题
优化：对 微信支付的后台配置添加相应的文字说明，方便使用者更加清晰的去使用
优化：对 订单和支付等内容进行 "固化"，不允许自己去支付别人的订单。
修复：当产品启用 Lucene 搜索引擎后，无法搜索其内容的问题
修复：当产品更新的时候，缓存无法及时清空的问题
修复：当产品和文章同时开启 ElasticSearch 搜索引擎的时候，会出现索引覆盖的问题
修复：对用户进行删除的时候，没有删除用户的 OpenId，导致该用户每次访问都会创建新的用户的问题
文档：添加 JPress 升级的相关文档



jpress v3.1.1:
新增：订单超时的时间设置功能，超时订单自动被关闭
新增：新增产品分类的标签 #productCategoryList，用于读取产品分类内容
优化：优化订单列表的文字样式以及发货按钮的显示逻辑
优化：移除 AdminOrderDetailPgeRender 和 UCenterOrderDetailPageRender 的配置支持
优化：优化 install.sh ，在某些时候无法正常安装的问题
优化：优化 docker-compose.yml ，升级 mysql image 到 5.7
优化：用户推出方法 doLogout() 修改为 logout()
优化：优化插件模块，在某些极端情况下出现无法删除插件内容的问题
优化：升级jboot、fastjson、jcseg等相关依赖到最新版本
修复：购买产品时，默认地址不正确的问题
修复：对未支付订单重新支付时，无法选择新地址的问题
修复：修复代码生成器生成的代码内容编辑的 URL 路径错误的问题，感谢  @安杰
修复：代码生成器生成的代码中，进行批量删除时出现404的问题，感谢 @安杰



jpress v3.1.0: