@@ -1,3 +1,8 @@
+jpress v3.2.4:
+修复：紧急修复由于 Jboot 问题导致插件不可用的问题
+
+
+
 jpress v3.2.3:
 新增：新增用户绑定账号后，取消绑定的功能
 新增：尝试性支持 jdk11 ~ jdk14
